@@ -59,6 +59,8 @@ production.
 * Conversion script between Tifinagh and Latin for the Tachelhit language
 * (bug 16755) Add options 'noreplace' and 'noerror' to {{DEFAULTSORT:...}}
   to stop it from replace an already existing default sort, and suppress error.
+* (bug 30364) LanguageConverter now depends on the page content language
+  instead of the wiki content language
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if
